--- a/packages/editor/src/form/components/formql-editor.component.scss
+++ b/packages/editor/src/form/components/formql-editor.component.scss
@@ -1,3 +1,54 @@
+
+.fql-logo {
+    // background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' viewBox='0 0 392 418'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B clip-path: url(%23clip-custom_1); %7D .cls-2, .cls-7 %7B fill: %233cccea; %7D .cls-2 %7B stroke-linecap: round; stroke-linejoin: round; %7D .cls-3 %7B clip-path: url(%23clip-path); %7D .cls-4 %7B opacity: 0.1; %7D .cls-5 %7B fill: %231a0a54; %7D .cls-6, .cls-7 %7B stroke: none; %7D .cls-8 %7B filter: url(%23Rectangle_33); %7D .cls-9 %7B filter: url(%23Rectangle_2); %7D .cls-10 %7B filter: url(%23Rectangle_32); %7D .cls-11 %7B filter: url(%23Rectangle_31); %7D .cls-12 %7B filter: url(%23Rectangle_1); %7D %3C/style%3E%3CradialGradient id='radial-gradient' cx='0.968' cy='0.695' r='0.454' gradientTransform='matrix(1.074, 0, 0, 1.074, -0.071, -0.051)' gradientUnits='objectBoundingBox'%3E%3Cstop offset='0' stop-color='%23ff2323'/%3E%3Cstop offset='1' stop-color='%23545454'/%3E%3C/radialGradient%3E%3CclipPath id='clip-path'%3E%3Cpath id='Path_12' data-name='Path 12' d='M179.538,385.96,332.246,301.1,359.354,62.881,179.538-1.192-1.264,62.881,25.844,301.1Z' transform='translate(1.264 1.192)'/%3E%3C/clipPath%3E%3Cfilter id='Rectangle_1' x='84.788' y='101.318' width='72.857' height='60' filterUnits='userSpaceOnUse'%3E%3CfeOffset dx='2' dy='3' input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur'/%3E%3CfeFlood flood-opacity='0'/%3E%3CfeComposite operator='in' in2='blur'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3Cfilter id='Rectangle_31' x='84.788' y='172.907' width='72.857' height='60' filterUnits='userSpaceOnUse'%3E%3CfeOffset dx='2' dy='3' input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur-2'/%3E%3CfeFlood flood-opacity='0'/%3E%3CfeComposite operator='in' in2='blur-2'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3Cfilter id='Rectangle_32' x='84.788' y='244.496' width='72.857' height='60' filterUnits='userSpaceOnUse'%3E%3CfeOffset dx='2' dy='3' input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur-3'/%3E%3CfeFlood flood-opacity='0'/%3E%3CfeComposite operator='in' in2='blur-3'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3Cfilter id='Rectangle_2' x='159.001' y='101.318' width='181.535' height='60' filterUnits='userSpaceOnUse'%3E%3CfeOffset dx='2' dy='3' input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur-4'/%3E%3CfeFlood flood-opacity='0'/%3E%3CfeComposite operator='in' in2='blur-4'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3Cfilter id='Rectangle_33' x='159.001' y='172.953' width='181.535' height='60' filterUnits='userSpaceOnUse'%3E%3CfeOffset dx='2' dy='3' input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur-5'/%3E%3CfeFlood flood-opacity='0'/%3E%3CfeComposite operator='in' in2='blur-5'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3CclipPath id='clip-custom_1'%3E%3Crect width='392' height='418'/%3E%3C/clipPath%3E%3C/defs%3E%3Cg id='custom_1' data-name='custom – 1' class='cls-1'%3E%3Cg id='logo2' transform='translate(-223.516 -329.66)'%3E%3Cg id='text-line-form' transform='translate(239.637 344.66)'%3E%3Cg id='Path_10' data-name='Path 10' class='cls-2' transform='translate(1.264 1.192)'%3E%3Cpath class='cls-6' d='M 179.5401916503906 387.6749572753906 L 178.8128509521484 387.2733459472656 L 25.11904907226563 302.4154052734375 L 24.44119834899902 302.0411682128906 L 24.35364723205566 301.2718505859375 L -2.754301786422729 63.05055999755859 L -2.889151811599731 61.86551284790039 L -1.764951825141907 61.46710968017578 L 179.0368041992188 -2.606238842010498 L 179.5391998291016 -2.784288883209229 L 180.0413513183594 -2.605388879776001 L 359.8573913574219 61.46796035766602 L 360.9789123535156 61.86761093139648 L 360.8442993164063 63.05055999755859 L 333.7363891601563 301.2718505859375 L 333.6491394042969 302.0386047363281 L 332.974609375 302.4134216308594 L 180.2664489746094 387.2713623046875 L 179.5401916503906 387.6749572753906 Z'/%3E%3Cpath class='cls-7' d='M 179.537841796875 385.960205078125 L 332.2460021972656 301.1022644042969 L 359.3539123535156 62.88096237182617 L 179.537841796875 -1.192388892173767 L -1.263901829719543 62.88096237182617 L 25.84404754638672 301.1022644042969 L 179.537841796875 385.960205078125 M 179.5378570556641 388.9602355957031 C 179.0384826660156 388.9602355957031 178.5391082763672 388.835693359375 178.0877990722656 388.5865173339844 L 24.39399909973145 303.7285461425781 C 23.54354858398438 303.2590026855469 22.97309875488281 302.4067077636719 22.8632984161377 301.4414672851563 L -4.244651794433594 63.22016143798828 C -4.402551651000977 61.83266067504883 -3.582201719284058 60.51971054077148 -2.26600193977356 60.05326080322266 L 178.5357513427734 -4.020088672637939 C 178.8598785400391 -4.134954452514648 179.1988830566406 -4.192389965057373 179.5377960205078 -4.192389965057373 C 179.8785247802734 -4.192389965057373 180.2191467285156 -4.134374618530273 180.5447998046875 -4.018338680267334 L 360.36083984375 60.05501174926758 C 361.6744384765625 60.5230598449707 362.4923400878906 61.83460998535156 362.3346557617188 63.22016143798828 L 335.2267456054688 301.4414672851563 C 335.1172485351563 302.40380859375 334.5498352050781 303.2541198730469 333.7031860351563 303.724609375 L 180.9950408935547 388.5825500488281 C 180.5420074462891 388.8343200683594 180.0399322509766 388.9602355957031 179.5378570556641 388.9602355957031 Z'/%3E%3C/g%3E%3Cg id='Mask_Group_4' data-name='Mask Group 4' class='cls-3'%3E%3Crect id='Rectangle_34' data-name='Rectangle 34' class='cls-4' width='301' height='667' transform='translate(179.879 -156)'/%3E%3C/g%3E%3C/g%3E%3Cg class='cls-12' transform='matrix(1, 0, 0, 1, 223.52, 329.66)'%3E%3Crect id='Rectangle_1-2' data-name='Rectangle 1' class='cls-5' width='54.857' height='42' rx='21' transform='translate(91.79 107.32)'/%3E%3C/g%3E%3Cg class='cls-11' transform='matrix(1, 0, 0, 1, 223.52, 329.66)'%3E%3Crect id='Rectangle_31-2' data-name='Rectangle 31' class='cls-5' width='54.857' height='42' rx='21' transform='translate(91.79 178.91)'/%3E%3C/g%3E%3Cg class='cls-10' transform='matrix(1, 0, 0, 1, 223.52, 329.66)'%3E%3Crect id='Rectangle_32-2' data-name='Rectangle 32' class='cls-5' width='54.857' height='42' rx='21' transform='translate(91.79 250.5)'/%3E%3C/g%3E%3Cg class='cls-9' transform='matrix(1, 0, 0, 1, 223.52, 329.66)'%3E%3Crect id='Rectangle_2-2' data-name='Rectangle 2' class='cls-5' width='163.535' height='42' rx='21' transform='translate(166 107.32)'/%3E%3C/g%3E%3Cg class='cls-8' transform='matrix(1, 0, 0, 1, 223.52, 329.66)'%3E%3Crect id='Rectangle_33-2' data-name='Rectangle 33' class='cls-5' width='163.535' height='42' rx='21' transform='translate(166 178.95)'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    display: table-cell;
+    // width: 28px;
+    // height: 30px;
+}
+
+.fixed-header {
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: rgb(28, 32, 34);
+    height: 3rem;
+    width: 100%  !important;
+}
+
+.fql-header-line {
+    display: grid;
+    grid-template-columns: 30px auto auto;
+}
+
+.fql-header-name {
+    color: rgba(255, 255, 255, 0.7);
+    vertical-align: middle;
+    line-height: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.fql-header-menu {
+    display: table-cell;
+    color: rgba(255, 255, 255, 0.7);
+    line-height: 30px;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.fql-logo-save {
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 30px;
+    width: 23px;
+    height: 25px;
+}
+
+.fql-logo-save svg {
+    fill: rgba(255, 255, 255, 0.7);
+}
+
+
 .mat-list {
     padding-top:0px !important;
 }
