--- a/packages/editor/src/form/components/formql-editor.component.scss
+++ b/packages/editor/src/form/components/formql-editor.component.scss
@@ -1,26 +1,45 @@
 
-.fql-left-sidenav {
-    background-color: #2a2a2a;
-    width: 60px;
-    min-width: 60px;
-}
-
-
 .fql-editor-window {
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
+    display: grid;
+    display: -ms-grid;
+    grid-template-areas: "header header" "sidebar main";
+    grid-template-columns: 60px 1fr;
+    -ms-grid-columns: 60px 1fr;
+    grid-template-rows: 3rem 1fr;
+    -ms-grid-columns: 3rem 1fr;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     overflow: hidden;
 }
 
-.fql-fixed-header {
+.fql-editor-header {
+    grid-area: header;
     top: 0;
     left: 0;
     z-index: 2;
     background-color: rgb(28, 32, 34);
-    height: 3rem;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    -ms-grid-row: 1;
+}
+
+.fql-editor-main {
+    grid-area: main;
+    -ms-grid-column: 2;
+    -ms-grid-row: 2;
+}
+
+.fql-left-sidenav {
+    grid-area: sidebar;
+    -ms-grid-column: 1;
+    -ms-grid-row: 2;
+    background-color: #2a2a2a;
+    width: 60px;
+    min-width: 60px;
+
 }
 
 .fql-header-line {
@@ -51,8 +70,6 @@
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
 }
-
-
 
 .fql-header-menu {
     color: rgba(255, 255, 255, 0.7);
@@ -106,107 +123,3 @@
     -ms-grid-row-span: 1;
 }
 
-
-.mat-list {
-    padding-top:0px !important;
-}
-
-.mat-list-item {
-    height: inherit !important;
-}
-
-
-.mat-drawer-container {
-    height: 100vh;
-    width: 100vw;
-  }
-  
-
-.mat-drawer-right-sidenav {
-    background-color: #f5f5f5;
-    width: 50%;
-    min-width:30px;
-}
-
-
-.form-root-mat-list-item {
-    color: white;
-    font-size: 12px;
-    
-}
-
-.form-root-mat-list-item-icon {
-    transform: scale(0.8);
-}
-
-.form-root-icon-sidenav {
-    line-height: 50px;
-    cursor:pointer;
-    color:white;
-    transform: scale(1.5);
-}
-
-.form-root-mat-divider {
-    background-color: #aaa
-}
-
-.not-selectable {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-
-
-.left-sidenav-item {
-    color: #eee;
-    transform: scale(1.5);
-}
-
-.left-close-icon {
-    color: #eee;
-    position: relative;
-    float: right;
-    top: 2px;
-    right: 2px;
-    transform: scale(0.8);
-    cursor: pointer;
-}
-
-.right-close-icon {
-    color: #2a2a2a;;
-    position: relative;
-    float: right;
-    top: 2px;
-    right: 2px;
-    transform: scale(0.8);
-    cursor: pointer;
-}
-
-.editor {
-    display: inline-block;
-    padding: 10px;
-    width: 100%;
-}
-
-#loader {  
-    position:relative;
-    margin:0 auto;
-    margin-top: 20px;
-    clear:left;
-    height:auto;
-    z-index: 0;
-    text-align:center;
-}
-
-.form-root-expansion-panel {
-    background-color: #2a2a2a;
-    color:white;
-}
-
-
-.form-root-mat-list-item:hover {
-    background-color: #444;
-}
