--- a/packages/editor/src/form/components/formql-editor.component.scss
+++ b/packages/editor/src/form/components/formql-editor.component.scss
@@ -1,3 +1,9 @@
+*,
+*::after,
+*::before {
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
 
 .fql-editor-window {
     display: grid;
@@ -24,6 +30,11 @@
     -ms-grid-column: 1;
     -ms-grid-column-span: 2;
     -ms-grid-row: 1;
+    display: flex;
+    height: 3rem;
+    align-items: center;
+    padding:0 16px;
+    white-space: nowrap;
 }
 
 .fql-editor-main {
@@ -122,4 +133,82 @@
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
 }
+
+.fql-slide-bar {
+    position: absolute;
+	top: 3rem;
+    right: 0;
+	z-index: 100;
+	visibility: hidden;
+	width: 800px;
+	height: 100%;
+	background: #48a770;
+	-webkit-transition: all 0.5s;
+    transition: all 0.5s;
+}
+
+.fql-slide-bar::after {
+	position: absolute;
+	top: 3rem;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,0.2);
+	content: '';
+	opacity: 1;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
+}
+
+.fql-slide-pusher {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+	width: 100%;
+	height: 100%;
+    z-index: 99;
+    opacity: 0.5;
+    -webkit-transition: background 0.5s ease-out;
+    transition: background 0.5s ease-out;
+    background: black;
+    
+}
+
+
+.fql-slide-bar-open .fql-slide-pusher::after {
+    width: 100%;
+	height: 100%;
+	opacity: 1;
+	-webkit-transition: opacity 0.5s;
+	transition: opacity 0.5s;
+}
+
+.fql-slide-bar-open .fql-slide-bar::after {
+	width: 0;
+	height: 0; 
+	opacity: 0;
+	-webkit-transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+	transition: opacity 0.5s, width 0.1s 0.5s, height 0.1s 0.5s;
+}
+
+.fql-bar-effect.fql-slide-bar {
+	visibility: visible;
+    -webkit-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
+
+}
+
+.fql-bar-effect.fql-slide-bar-open .fql-bar-effect.fql-slide-bar {
+	visibility: visible;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
+
+.fql-bar-effect.fql-slide-bar::after {
+	display: none;
+}
+
+
 
