progress on editBar, still a lot of work to do

--- a/packages/editor/src/form/components/form-editors/form-component-editor/form-component-editor-schema/form-component-editor-schema.component.html
+++ b/packages/editor/src/form/components/form-editors/form-component-editor/form-component-editor-schema/form-component-editor-schema.component.html
@@ -1,8 +1,8 @@
 
 <h5 class="form-component-editor-section">Data Mapping</h5>
-<!-- <label for="query">Schema</label> -->
-<!-- <form-json-evaluator [(value)]="component.schema" [rows]="2"></form-json-evaluator> -->
-<!-- <form-editor-field-input [fieldLabel]="'Schema'" [(valid)]="valid" 
+<label for="query">Schema</label>
+<form-json-evaluator [(value)]="component.schema" [rows]="2"></form-json-evaluator>
+<form-editor-field-input [fieldLabel]="'Schema'" [(valid)]="valid" 
       [(value)]="component.schema"
       [mode]="'javascript'"
       [data]="data"></form-editor-field-input>
@@ -24,4 +24,4 @@
     <br>
   </ng-container>
   
-</ng-container> -->
+</ng-container>
