--- a/packages/editor/src/form/components/form-editors/form-component-editor/form-component-editor-misc/form-component-editor-misc.component.html
+++ b/packages/editor/src/form/components/form-editors/form-component-editor/form-component-editor-misc/form-component-editor-misc.component.html
@@ -1,4 +1,4 @@
-<!-- <h5 class="form-component-editor-misc-section">Misc</h5>
+<h5 class="form-component-editor-misc-section">Misc</h5>
 <mat-form-field class="mat-form-field-style">
   <input matInput [(ngModel)]="component.label" [placeholder]="'Label'" required>
 </mat-form-field>
@@ -13,9 +13,8 @@
 
 <mat-form-field class="mat-form-field-style">
   <input matInput [(ngModel)]="component.tabIndex" [placeholder]="'Tab Index'">
-</mat-form-field> -->
+</mat-form-field> 
 
-<!-- 
 <div  class="card">
   <div class="card-header">Miscellaneous</div>
   <div class="card-body">
@@ -26,4 +25,4 @@
     <button type="button" class="btn btn-primary float-right" (click)="save()" [disabled]="disableSaveButton">Save</button>
     <button type="button" class="btn btn-secondary float-left" (click)="cancel()">Cancel</button>
   </div>
-</div> -->
+</div>
