--- a/packages/editor/src/form/components/formql-editor.component.scss
+++ b/packages/editor/src/form/components/formql-editor.component.scss
@@ -13,12 +13,13 @@
     -ms-grid-columns: 60px 1fr;
     grid-template-rows: 3rem 1fr;
     -ms-grid-columns: 3rem 1fr;
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     overflow: hidden;
+    height: 100%
 }
 
 .fql-editor-header {
@@ -140,9 +141,9 @@
     right: 0;
 	z-index: 100;
 	visibility: hidden;
-	width: 800px;
+	width: 50%;
 	height: 100%;
-	background: #48a770;
+	background: #fff;
 	-webkit-transition: all 0.5s;
     transition: all 0.5s;
 }
