tab sortted - not using material :-)

--- a/packages/editor/src/form/components/form-editors/form-datasource-editor/form-datasource-editor.component.html
+++ b/packages/editor/src/form/components/form-editors/form-datasource-editor/form-datasource-editor.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<!-- <mat-card class="example-card">
   <mat-card-title>Form Configuration</mat-card-title>
   <mat-card-content>
     <mat-tab-group>
@@ -13,16 +13,16 @@
         <h5 class="form-component-editor-section">Style</h5>
         <mat-form-field class="mat-form-field-style">
           <input matInput [(ngModel)]="updatedClass" [placeholder]="'Form class'" required>
-        </mat-form-field>
+        </mat-form-field> -->
         
         <!-- <form-component-editor-misc *ngIf="!loading" [component]="updatedComponent" [data]="data" [liveEdit]="liveEdit"
           (action)="actionTriggered($event)"></form-component-editor-misc> -->
-      </mat-tab>
+      <!-- </mat-tab> -->
       <!-- <mat-tab label="Properties">
         <br>
         <form-component-editor-schema *ngIf="!loading" [component]="updatedComponent" [data]="data" [liveEdit]="liveEdit" (action)="actionTriggered($event)"></form-component-editor-schema>
       </mat-tab> -->
-      <mat-tab label="Advanced">
+      <!-- <mat-tab label="Advanced">
         <br>
         Comming soon..
       </mat-tab>
@@ -35,7 +35,7 @@
       <button mat-flat-button  (click)="save()">Save</button>
     </div>
   </mat-card-actions>
-</mat-card>
+</mat-card> -->
 
 
 
