--- a/packages/editor/src/form/components/right-side-bar.component.html
+++ b/packages/editor/src/form/components/right-side-bar.component.html
@@ -1,7 +1,7 @@
 <div class="fql-editor-wrapper">
     <div class="fql-editor-header">
         <div class="fql-editor-title">
-            <h1>sad</h1>
+            <h1>Chart Component</h1>
         </div>
         <div class="fql-editor-buttons">
             <div class="fql-logo-save">
