--- a/packages/editor/src/form/components/right-side-bar.component.scss
+++ b/packages/editor/src/form/components/right-side-bar.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../variables.scss";
+@import "../../variables.scss";
 
 .fql-editor-wrapper {
     position: relative;
@@ -77,7 +77,7 @@ label {
   width: 100%;
   .tab-content {
     position: absolute;
-    top: 100px;
+    top: 80px;
     left: 0px;
     line-height: 130%;
     display: none;
@@ -87,8 +87,24 @@ label {
 .fql-editor-header {
     display: grid;
     display: -ms-grid;
-    grid-template-columns: auto 50px; 
-    -ms-grid-columns: auto 50px;
+    grid-template-columns: 1fr 50px; 
+    -ms-grid-columns: 1fr 50px;
+}
+
+.fql-editor-title {
+    -ms-grid-column: 1;
+    -ms-grid-row: 1;
+}
+
+.fql-editor-buttons {
+    vertical-align: middle;
+    line-height: 90px;
+    display: grid;
+    display: -ms-grid;
+    grid-template-columns: 30px 30px; 
+    -ms-grid-columns: 30px 30px;
+    -ms-grid-column: 2;
+    -ms-grid-row: 1;
 }
 
 
@@ -96,6 +112,8 @@ label {
     width: 23px;
     height: 25px;
     cursor: pointer;
+    -ms-grid-column: 1;
+    -ms-grid-row: 1;
 }
 
 .fql-logo-save  {
@@ -106,18 +124,13 @@ label {
     width: 23px;
     height: 25px;
     cursor: pointer;
+    -ms-grid-column: 2;
+    -ms-grid-row: 1;
 }
 
 .fql-logo-close svg {
     fill: rbga(0,0,0,0.9);
 }
 
-.fql-editor-buttons {
-    vertical-align: middle;
-    line-height: 90px;
-    display: grid;
-    display: -ms-grid;
-    grid-template-columns: 30px 30px; 
-    -ms-grid-columns: 30px 30px;
-}
+
 
