adding fields and fixing the section+component editors

--- a/packages/editor/src/form/components/form-editors/form-component-editor/form-component-editor-schema/form-component-editor-schema.component.html
+++ b/packages/editor/src/form/components/form-editors/form-component-editor/form-component-editor-schema/form-component-editor-schema.component.html
@@ -1,4 +1,4 @@
-
+<!-- 
 <h5 class="form-component-editor-section">Data Mapping</h5>
 <label for="query">Schema</label>
 <form-json-evaluator [(value)]="component.schema" [rows]="2"></form-json-evaluator>
@@ -24,4 +24,4 @@
     <br>
   </ng-container>
   
-</ng-container>
+</ng-container> -->
