--- a/packages/editor/src/form/components/component-editor.component.scss
+++ b/packages/editor/src/form/components/component-editor.component.scss
@@ -133,5 +133,10 @@ input[type="radio"][name="tabs"] {
     fill: rbga(0,0,0,0.9);
 }
 
+.fql-properties-div {
+    border-top: 1px solid rgba(0,0,0,0.12);
+    padding-top: 5px;
+    margin-top: 10px;
+}
 
 
