--- a/packages/core/src/form/components/component-container.component.scss
+++ b/packages/core/src/form/components/component-container.component.scss
@@ -12,7 +12,8 @@
 }
 
 .fql-component-container-wrapper:hover {
-    background-color: rgb(200, 200, 200);
+    box-shadow: 3px 3px 3px rgb(200, 200, 200);
+    border: 1px solid;
 }
 
 .fql-component-tooltip {
