--- a/packages/core/src/form/components/section-wrapper.component.scss
+++ b/packages/core/src/form/components/section-wrapper.component.scss
@@ -22,7 +22,9 @@
 
 
 .fql-section-wrapper-edit:hover {
-    background-color: rgb(220, 220, 220);
+    //background-color: rgb(220, 220, 220);
+    border: 1px solid;
+    box-shadow: 3px 3px 3px rgb(200, 200, 200);
 }
 
 .fql-section-header {
