--- a/packages/editor/src/form/components/section-editor.component.scss
+++ b/packages/editor/src/form/components/section-editor.component.scss
@@ -49,7 +49,7 @@ input[type="radio"][name="tabs"] {
   }
 }
 
-label {
+.fql-tab-label {
   cursor: pointer;
   color: #000;
   background-color: #fff;
@@ -81,6 +81,7 @@ label {
     left: 0px;
     line-height: 130%;
     display: none;
+    width: 100%
   }
 }
 
@@ -132,5 +133,10 @@ label {
     fill: rbga(0,0,0,0.9);
 }
 
+.fql-properties-div {
+    border-top: 1px solid rgba(0,0,0,0.12);
+    padding-top: 5px;
+    margin-top: 10px;
+}
 
 
