--- a/packages/editor/src/form/components/left-side-bar.component.scss
+++ b/packages/editor/src/form/components/left-side-bar.component.scss
@@ -1,13 +1,11 @@
 .flq-left-menu {
     display: grid;
     display: -ms-grid;
-    grid-template-rows: 55px 55px;
-    -ms-grid-rows: 55px 55px;
+    grid-template-rows: 55px 55px 55px;
+    -ms-grid-rows: 55px 55px 55px;
 }
 
-.flq-left-menu-section {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
+.flq-left-menu-page {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     color: white;
@@ -15,27 +13,53 @@
     margin-bottom: 20px;
 }
 
-.flq-left-menu-section svg {
+.flq-left-menu-page svg {
+    fill: rgba(255, 255, 255, 0.7);
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+}
+
+.flq-left-menu-page:hover svg {
     fill: rgba(255, 255, 255, 0.9);
+}
+
+
+.flq-left-menu-section {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    color: white;
+    margin: 10px;
+    margin-bottom: 20px;
+}
+
+.flq-left-menu-section svg {
+    fill: rgba(255, 255, 255, 0.7);
     width: 40px;
     height: 40px;
     cursor: grab;
 }
 
+.flq-left-menu-section:hover svg {
+    fill: rgba(255, 255, 255, 0.9);
+}
+
 .flq-left-menu-component {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    -ms-grid-row: 2;
+    -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     color: white;
     margin: 10px;
 }
 
 .flq-left-menu-component svg {
-    fill: rgba(255, 255, 255, 0.9);
+    fill: rgba(255, 255, 255, 0.7);
     width: 44px;
     height: 40px;
     cursor: grab;
+}
+
+.flq-left-menu-component:hover svg {
+    fill: rgba(255, 255, 255, 0.9);
 }
 
 
