--- a/packages/editor/src/components/page-editor.component.html
+++ b/packages/editor/src/components/page-editor.component.html
@@ -1,7 +1,8 @@
 <div class="fql-editor-wrapper">
     <div class="fql-editor-header">
         <div class="fql-editor-title">
-            <h1>{{updatedPage?.pageId}} Page</h1>
+            <h1 class="fql-editor-title-name">Page Editor</h1>
+            <h4 class="fql-editor-subtitle">{{updatedPage?.pageId}}</h4>
         </div>
         <div class="fql-editor-buttons">
             <div (click)="save()" class="fql-logo-save"></div>
