--- a/packages/editor/src/components/form-editor.component.html
+++ b/packages/editor/src/components/form-editor.component.html
@@ -1,7 +1,8 @@
 <div class="fql-editor-wrapper">
         <div class="fql-editor-header">
             <div class="fql-editor-title">
-                <h1>{{updatedForm?.formName}} Form</h1>
+                <h1 class="fql-editor-title-name">Form Editor</h1>
+                <h4 class="fql-editor-subtitle">{{updatedForm?.formName}}</h4>
             </div>
             <div class="fql-editor-buttons">
                 <div (click)="save()" class="fql-logo-save"></div>
