--- a/packages/editor/src/components/section-editor.component.html
+++ b/packages/editor/src/components/section-editor.component.html
@@ -1,7 +1,8 @@
 <div class="fql-editor-wrapper">
     <div class="fql-editor-header">
         <div class="fql-editor-title">
-            <h1>{{updatedSection?.sectionName}} Section</h1>
+            <h1 class="fql-editor-title-name">Section Editor</h1>
+            <h4 class="fql-editor-subtitle">{{updatedSection?.sectionName}}</h4>
         </div>
         <div class="fql-editor-buttons">
             <div (click)="save()" class="fql-logo-save"></div>
