--- a/packages/editor/src/variables.scss
+++ b/packages/editor/src/variables.scss
@@ -52,8 +52,6 @@ input[type=text]:focus {
     -ms-grid-row: 1;
 }
 
-
-
 .fql-logo-save {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24H0z' fill='none' /%3E%3Cpath d='M17 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V7l-4-4zm-5 16c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3zm3-10H5V5h10v4z' /%3E%3C/svg%3E");
     width: 23px;
@@ -83,6 +81,14 @@ input[type=text]:focus {
     fill: rbga(0,0,0,0.9);
 }
 
+.not-selectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
 
 
 
